fix: contrast issues; feat: boxshadows on buttons, hover cards, and video container

--- a/src/components/styles/_variables.scss
+++ b/src/components/styles/_variables.scss
@@ -45,7 +45,8 @@
 $black: #33475B;
 $primary-color: #D72F3E;
 $secondary-color: #FFE23D;
-$white: #F5F5F5;
+$white: #fff;
+$light-gray: #F5F5F5;
 
 
 $background-color: $white; 
