--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -221,12 +221,14 @@ body {
 
   .card:hover {
     background-color: #FFF;
-    border-color: #d4d4d4;
+    border-color: #e8e8e8;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
 
   .card.no-hover-effect:hover {
     background-color: transparent;
     border-color: transparent;
+    box-shadow: none;
   }
   
   .col.raised-card {
@@ -262,6 +264,7 @@ body {
     border-radius: 7px;
     border: none;
     text-transform: lowercase;
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
 
 header a.btn{
@@ -285,6 +288,7 @@ header a.btn::after {
   a.btn:hover {
     border-color: transparent;
     background-color: darken($btn-color, 10%);
+    box-shadow: none;
   }
   
   a.text-btn {
@@ -450,8 +454,7 @@ header a.btn::after {
     padding-top: 30px; height: 0; 
     overflow: hidden; 
     border-radius: 7px;
-    -webkit-clip-path: inset(0% round 7x);
-    clip-path: inset(0% round 7px);
+    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 8px;
   }
 
   .video-container iframe, 
@@ -462,6 +465,8 @@ header a.btn::after {
      left: 0; 
     width: 100%; 
     height: 100%; 
+    -webkit-clip-path: inset(0% round 7x);
+    clip-path: inset(0% round 7px);
   }
 
   #home .u-header,
